# renal-diet-guide

./: .gitattributes  .gitignore  README.md
backend/: .gitattributes  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py  recommend.py
backend/app/data/: parcing.py  parsed_food_db.json  retrieval_rag.py  vector_db_uploader.py
backend/app/data/rag_data/: index.faiss  index.pkl
backend/app/logic/: nutrition_target.py
frontend/: .gitignore  Dockerfile  components.json  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.js  render.yml  tailwind.config.js  tsconfig.json
frontend/pages/: chat.tsx  checklist.tsx  faq.tsx  index.tsx  profile.tsx  recommend.tsx  references.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx
frontend/stores/: formatMarkdown.tsx  usePatientStore.tsx
frontend/styles/: Home.module.css  globals.css
